test_suite/tests/ui/enum-representation/integer-and-adjacent.stderr
error: enum cannot be both represented as integer and carry a tag
 --> $DIR/integer-and-adjacent.rs:4:9
  |
4 | #[serde(integer)]
  |         ^^^^^^^

error: enum cannot be both represented as integer and carry a tag
 --> $DIR/integer-and-adjacent.rs:5:9
  |
5 | #[serde(tag = "t", content = "c")]
  |         ^^^

error: aborting due to 2 previous errors

